--- a/layout/css/styles.css
+++ b/layout/css/styles.css
@@ -11801,7 +11801,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/banner.jpg");
+  background-image: url("/../shop_xx/layout/assets/img/banner2.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
